Use the free type

--- a/app.json
+++ b/app.json
@@ -2,5 +2,15 @@
   "name": "Temporal on Rails deploy to Heroku example",
   "description": "A barebones Rails app with temporal-ruby sdk",
   "repository": "https://github.com/milk-video/temporal-rails-example",
-  "keywords": ["rails", "temporal", "ruby"]
+  "keywords": ["rails", "temporal", "ruby"],
+  "formation": {
+    "web": {
+      "quantity": 1,
+      "size": "free"
+    },
+    "worker": {
+      "quantity": 1,
+      "size": "free"
+    }
+  },
 }
